--- a/style.css
+++ b/style.css
@@ -241,7 +241,7 @@ table {
         display: block;
     }
 
-    .container {
+    .btndrop {
         width: 22px;
         height: 16px;
         background: none;
