--- a/style.css
+++ b/style.css
@@ -183,14 +183,18 @@ table {
         width: 100%;
         height: 53px;
         background: #edf5ff;
-        display: flex;
-        justify-content: space-between
     }
 
     .logo {
         width: 37px;
         height: 31px;
         margin: auto 15px;
+    }
+
+    .nav_content {
+        display: flex;
+        justify-content: space-between;
+        height: 100%;
     }
 
     .monitor {
@@ -224,7 +228,7 @@ table {
         position: absolute;
         background-color: #edf5ff;
         width: 100%;
-        height: 89%;
+        height: 427px;
     }
 
     .dropdown-content a {
@@ -234,9 +238,11 @@ table {
         display: flex;
         justify-content: center;
     }
-    .dropdown_container{
+
+    .dropdown_container {
         margin-top: 64px;
     }
+
     .show {
         display: block;
     }
@@ -258,11 +264,72 @@ table {
         height: 81px;
     }
 
+    .nav {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-top: 16px;
+        padding-left: 61px;
+        padding-right: 63px;
+    }
+
+    .btndrop {
+        display: none;
+    }
+
+    .dropdown_container {
+        display: flex;
+    }
+
     .wrape {
         background: url(/img/background.png) no-repeat;
         background-position: right bottom;
         height: 100vh;
         width: 100%;
         background-size: 80% 100%;
+    }
+
+    .main {
+        margin-top: 134px;
+    }
+
+    .monitor {
+        width: 345px;
+        height: 275px;
+        padding-right: 11%;
+        float: right;
+    }
+
+    .personal_content {
+        margin-top: 134px;
+        float: left;
+        padding-left: 5.8%
+    }
+
+    .font {
+        font-size: 24px;
+    }
+
+    .button {
+        margin-top: 24px;
+        width: 158px;
+        height: 43px;
+    }
+
+    .active_drop {
+        color: #334a7e;
+        border-bottom: 3px solid;
+        border-color: #334a7e;
+    }
+
+    .font_drop {
+        font-size: 18px;
+        line-height: 20px;
+        margin-right: 44px;
+    }
+
+    .reset {
+        margin: 0;
+        padding: 0;
     }
 }
